@startuml er_diagram_run_application
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

entity "users" as users {
  *id : uuid <<PK>>
  --
  username : text <<UQ>>
  display_name : text
  avatar_url : text
  territory_color : text
  is_banned : boolean
  created_at : timestamptz
  updated_at : timestamptz
}

entity "auth_identities" as auth_identities {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  provider : text
  identifier : text
  password_hash : text
  verified_at : timestamptz
}

entity "refresh_tokens" as refresh_tokens {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  token_hash : text <<UQ>>
  expires_at : timestamptz
  revoked_at : timestamptz
  replaced_by_token_hash : text
}

entity "runs" as runs {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  status : text
  started_at : timestamptz
  ended_at : timestamptz
  distance_m : double
  elapsed_s : int
  paused_s : int
  moving_s : int
  capture_area_m2 : double
  victims_count : int
  points : jsonb
  track_line : geometry(LineString,4326)
}

entity "run_points" as run_points {
  *run_id : uuid <<PK,FK>>
  *seq : int <<PK>>
  --
  ts : timestamptz
  lat : double
  lng : double
  accuracy_m : double
  speed_mps : double
}

entity "run_pauses" as run_pauses {
  *id : uuid <<PK>>
  --
  run_id : uuid <<FK>>
  started_at : timestamptz
  ended_at : timestamptz
  reason : text
}

entity "territories" as territories {
  *user_id : uuid <<PK,FK>>
  --
  geom : geometry(MultiPolygon,4326)
  updated_at : timestamptz
}

entity "user_stats" as user_stats {
  *user_id : uuid <<PK,FK>>
  --
  run_count : int
  total_distance_m : double
  total_elapsed_s : bigint
  total_paused_s : bigint
  total_moving_s : bigint
  owned_area_m2 : double
}

entity "user_last_notification" as user_last_notification {
  *user_id : uuid <<PK,FK>>
  --
  kind : text
  attacker_user_id : uuid <<FK>>
  run_id : uuid <<FK>>
  stolen_area_m2 : double
  payload : jsonb
  created_at : timestamptz
}

users ||--o{ auth_identities
users ||--o{ refresh_tokens
users ||--o{ runs
runs ||--o{ run_points
runs ||--o{ run_pauses
users ||--|| territories
users ||--|| user_stats
users ||--|| user_last_notification
runs |o--o| user_last_notification
users |o--o{ user_last_notification 

@enduml
